# django-liveconfigs

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
src/liveconfigs/: admin.py  apps.py  filters.py  forms.py  serializers.py  signals.py  tasks.py  urls.py  utils.py  validators.py  views.py
src/liveconfigs/management/commands/: delete_unused_configs.py  load_config.py
src/liveconfigs/migrations/: 0001_initial.py  0002_historyevent.py  0003_configrow_default_value.py  0004_remove_configrow_tags.py  0005_configrow_tags.py
src/liveconfigs/models/: __init__.py  descriptors.py  models.py
src/liveconfigs/static/admin/css/: liveconfigs.css
